JumpScript/tests/baselines/reference/parserClassDeclaration24.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration24.jump(1,7): error TS2414: Class name cannot be 'any'.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration24.jump (1 errors) ====
    class any {
          ~~~
!!! error TS2414: Class name cannot be 'any'.
    }